add padding to nav  in css

--- a/admission.html
+++ b/admission.html
@@ -11,15 +11,21 @@
 <body>
 
     <div class="container">
+
         <header>
             <nav>
                 <img src="./images/logo.png" alt="logo">
-                <ul class="nav-links">
-                    <li class="link-item"><a href="./index.html">home</a></li>
-                    <li class="link-item"><a href="./about.html">about us</a></li>
-                    <li class="link-item"><a href="./admission.html">admission</a></li>
-                    <li class="link-item"><a href="./contact.html">contact us</a></li>
-                </ul>
+                <div>
+                    <ul class="nav-links">
+                        <li class="link-item"><a href="./index.html">home</a></li>
+                        <li class="link-item"><a href="./about.html">about us</a></li>
+                        <li class="link-item"><a href="./admission.html">admission</a></li>
+                        <li class="link-item"><a href="./contact.html">contact us</a></li>
+                    </ul>
+                </div>
+                <div class="nav-toggle">
+                    <p>+</p>
+                </div>
             </nav>
         </header>
 
@@ -144,6 +150,7 @@
                             <li class="link-item"><a href="./contact.html">contact</a></li>
                         </ul>
                     </div>
+
                 </div>
 
                     <div class="footer-item">
