--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,17 @@
         <header>
             <nav>
                 <img src="./images/logo.png" alt="logo">
-                <ul class="nav-links">
-                    <li class="link-item"><a href="./index.html">home</a></li>
-                    <li class="link-item"><a href="./about.html">about us</a></li>
-                    <li class="link-item"><a href="./admission.html">admission</a></li>
-                    <li class="link-item"><a href="./contact.html">contact us</a></li>
-                </ul>
+                <div>
+                    <ul class="nav-links">
+                        <li class="link-item"><a href="./index.html">home</a></li>
+                        <li class="link-item"><a href="./about.html">about us</a></li>
+                        <li class="link-item"><a href="./admission.html">admission</a></li>
+                        <li class="link-item"><a href="./contact.html">contact us</a></li>
+                    </ul>
+                </div>
+                <div class="nav-toggle">
+                    <p>+</p>
+                </div>
             </nav>
         </header>
 
