add social media icons tohtml and css

--- a/admission.html
+++ b/admission.html
@@ -157,12 +157,19 @@
                         <div>
                             <h4 class="footer-heading ">our social media</h4>
                         </div>
-                        <div>
-                            <ul class="footer-socials socials">
-                                <li><a href="#"><img src="#" alt="facebook-logo"></a></li>
-                                <li><a href="#"><img src="#" alt="twitter-logo"></a></li>
-                                <li><a href="#"><img src="#" alt="instagram-logo"></a></li>
-                            </ul>
+                        <div class="footer-socials socials">
+                            <div class="icon">
+                                <div>
+                                    <a href="#"><img src="./images/facebook.svg" class="facebook-icon" alt="facebook-icon"></a>
+                                </div>
+                                <div>
+                                    <a href="#"><img src="./images/twitter.svg" class="twitter-icon" alt="facebook-icon"></a>
+                                </div>
+                                <div>
+                                    <a href="#"><img src="./images/instagram.svg" class="instagram-icon" alt="facebook-icon"></a>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
