--- a/contact.html
+++ b/contact.html
@@ -61,15 +61,6 @@
 
                         </div>
 
-                        <div class="contact-details">
-                            <h3 class="sub-title">connect with us</h3>
-                            <ul class="socials">
-                                <li><a href="#"><img src="#" alt="facebook-logo"></a></li>
-                                <li><a href="#"><img src="#" alt="twitter-logo"></a></li>
-                                <li><a href="#"><img src="#" alt="instagram-logo"></a></li>
-
-                            </ul>
-                        </div>
 
                     </div>
                 </div>
@@ -149,12 +140,18 @@
                         <div>
                             <h4 class="footer-heading ">our social media</h4>
                         </div>
-                        <div>
-                            <ul class="footer-socials socials">
-                                <li><a href="#"><img src="#" alt="facebook-logo"></a></li>
-                                <li><a href="#"><img src="#" alt="twitter-logo"></a></li>
-                                <li><a href="#"><img src="#" alt="instagram-logo"></a></li>
-                            </ul>
+                        <div class="footer-socials socials">
+                            <div class="icon">
+                                <div>
+                                    <a href="#"><img src="./images/facebook.svg" class="facebook-icon" alt="facebook-icon"></a>
+                                </div>
+                                <div>
+                                    <a href="#"><img src="./images/twitter.svg" class="twitter-icon" alt="facebook-icon"></a>
+                                </div>
+                                <div>
+                                    <a href="#"><img src="./images/instagram.svg" class="instagram-icon" alt="facebook-icon"></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
