--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>High Hope School</title>
 </head>
 <body>
@@ -131,12 +132,19 @@
                         <div>
                             <h4 class="footer-heading ">our social media</h4>
                         </div>
-                        <div>
-                            <ul class="footer-socials socials">
-                                <li><a href="#"><img src="#" alt="facebook-logo"></a></li>
-                                <li><a href="#"><img src="#" alt="twitter-logo"></a></li>
-                                <li><a href="#"><img src="#" alt="instagram-logo"></a></li>
-                            </ul>
+                        <div class="footer-socials socials">
+                            <div class="icon">
+                                <div>
+                                    <a href="#"><img src="./images/facebook.svg" class="facebook-icon" alt="facebook-icon"></a>
+                                </div>
+                                <div>
+                                    <a href="#"><img src="./images/twitter.svg" class="twitter-icon" alt="facebook-icon"></a>
+                                </div>
+                                <div>
+                                    <a href="#"><img src="./images/instagram.svg" class="instagram-icon" alt="facebook-icon"></a>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
