add nav links id and nav-toggle id in html and declare them as variables in js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>High Hope School</title>
 </head>
 <body>
@@ -16,14 +15,14 @@
             <nav>
                 <img src="./images/logo.png" alt="logo">
                 <div>
-                    <ul class="nav-links">
+                    <ul class="nav-links" id="nav-links" >
                         <li class="link-item"><a href="./index.html">home</a></li>
                         <li class="link-item"><a href="./about.html">about us</a></li>
                         <li class="link-item"><a href="./admission.html">admission</a></li>
                         <li class="link-item"><a href="./contact.html">contact us</a></li>
                     </ul>
                 </div>
-                <div class="nav-toggle">
+                <div class="nav-toggle" id="nav-toggle">
                     <p>+</p>
                 </div>
             </nav>
