change nav-toggle div to button and add css

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                         <li class="link-item"><a href="./contact.html">contact us</a></li>
                     </ul>
                 </div>
-                <div class="nav-toggle" id="nav-toggle">
-                    <p>+</p>
-                </div>
+                    <button class="nav-toggle" id="nav-toggle">+</button>
             </nav>
         </header>
 
