change id from nav-toggle to hamburger-button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li class="link-item"><a href="./contact.html">contact us</a></li>
                     </ul>
                 </div>
-                    <button class="nav-toggle" id="nav-toggle">+</button>
+                    <button class="nav-toggle" id="hamburger-button">+</button>
             </nav>
         </header>
 
