change grid to flexbox styling for the whole website

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
                 <div>
                     <ul class="nav-links">
                         <li class="link-item"><a href="./index.html">home</a></li>
-                        <li class="link-item"><a href="./about.html">about us</a></li>
+                        <li class="link-item"><a href="./about.html">about</a></li>
                         <li class="link-item"><a href="./admission.html">admission</a></li>
-                        <li class="link-item"><a href="./contact.html">contact us</a></li>
+                        <li class="link-item"><a href="./contact.html">contact</a></li>
                     </ul>
                 </div>
                 <div class="nav-toggle">
