--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
                 <div>
                     <ul class="nav-links">
                         <li class="link-item"><a href="./index.html">home</a></li>
-                        <li class="link-item"><a href="./about.html">about us</a></li>
+                        <li class="link-item"><a href="./about.html">about</a></li>
                         <li class="link-item"><a href="./admission.html">admission</a></li>
-                        <li class="link-item"><a href="./contact.html">contact us</a></li>
+                        <li class="link-item"><a href="./contact.html">contact</a></li>
                     </ul>
                 </div>
                 <div class="nav-toggle">
@@ -48,7 +48,7 @@
         </section>
 
         <section class="intro">
-            <div class="main-intro">
+            <div class="sub-intro">
                 <div class="intro-heading">
                     <h1>our educational objectives </h1>
                 </div>
