--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-    <title>High Hope School</title>
+    <title>High Hopes School</title>
 </head>
 <body>
 
@@ -14,15 +14,15 @@
         <header>
             <nav>
                 <img src="./images/logo.png" alt="logo">
-                <div>
-                    <ul class="nav-links" id="nav-links" >
-                        <li class="link-item"><a href="./index.html">home</a></li>
-                        <li class="link-item"><a href="./about.html">about us</a></li>
-                        <li class="link-item"><a href="./admission.html">admission</a></li>
-                        <li class="link-item"><a href="./contact.html">contact us</a></li>
-                    </ul>
-                </div>
-                    <button class="nav-toggle" id="hamburger-button">+</button>
+
+                <ul class="nav-links" id="nav-links" >
+                    <li class="link-item"><a href="./index.html">home</a></li>
+                    <li class="link-item"><a href="./about.html">about</a></li>
+                    <li class="link-item"><a href="./admission.html">admission</a></li>
+                    <li class="link-item"><a href="./contact.html">contact</a></li>
+                </ul>
+
+                <button class="nav-toggle" id="nav-toggle">+</button>
             </nav>
         </header>
 
@@ -31,7 +31,7 @@
         </section>
 
         <section class="intro">
-            <div class="main-intro">
+            <div class="sub-intro">
                 <div class="intro-heading">
                     <h1>welcome to high hope school </h1>
                 </div>
@@ -59,7 +59,7 @@
         <section class="more-info">
             <div class="additional">
                 <div>
-                    <img src="./images/image2.png" alt="photo of school children">
+                    <img class="additional-image" src="./images/image2.png" alt="photo of school children">
                 </div>
                 <div class="additional-text">
                     <div>
