add images and background images

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 
         <section class="more-info">
             <div class="additional">
-                <img src="./images/image2.png" alt="photo of school children">
+                <img src="./images/background.jpg" alt="photo of school children">
                 <div class="additional-text">
                     <div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere tenetur itaque repellat neque facilis odit, quisquam nobis ducimus commodi autem?</p>
