--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <h1>our academic programmes</h1>
             </div>
             <div class="card">
-                <div class="card-item">kindergarten</div>
-                <div class="card-item">primary</div>
-                <div class="card-item">high school</div>
+                <div class="card-item kindergarten">kindergarten</div>
+                <div class="card-item primary">primary</div>
+                <div class="card-item high-school">high school</div>
             </div>
 
         </section>
@@ -59,7 +59,7 @@
         <section class="more-info">
             <div class="additional">
                 <div>
-                    <img class="additional-image" src="./images/image2.png" alt="photo of school children">
+                    <img class="additional-image" src="./images/primary.jpg" alt="photo of school children">
                 </div>
                 <div class="additional-text">
                     <div>
