--- a/admission.html
+++ b/admission.html
@@ -93,7 +93,7 @@
 
                     </div>
                 </div>
-                <img src="./images/image2.png" class="admission-image" alt="photo of school children">
+                <img src="./images/primary2.jpg" class="admission-image" alt="photo of school children">
             </div>
         </section>
 
