add button container and button

--- a/about.html
+++ b/about.html
@@ -14,7 +14,10 @@
 
         <header>
             <nav>
-                <img src="./images/logo.png" alt="logo">
+                <div>
+                    <a href="./index.html"><img class="logo-image" src="./images/logo.png" alt="logo"></a>
+                </div>
+
                 <div>
                     <ul class="nav-links">
                         <li class="link-item"><a href="./index.html">home</a></li>
@@ -35,12 +38,14 @@
 
         <section class="more-info">
             <div class="additional">
-                <img src="./images/background.jpg" alt="photo of school children">
+                <img src="./images/background2.jpg" alt="photo of school children">
                 <div class="additional-text">
                     <div>
+                        <h2 class="intro-heading">our vision</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere tenetur itaque repellat neque facilis odit, quisquam nobis ducimus commodi autem?</p>
                     </div>
                     <div>
+                        <h2 class="intro-heading">our mission</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt repellendus harum, saepe beatae quod exercitationem modi quos atque debitis consequuntur ipsum? Deserunt repellat officia recusandae. Suscipit provident magnam veritatis blanditiis!</p>
                     </div>
                 </div>
@@ -65,13 +70,17 @@
                 <h1>management and staff</h1>
             </div>
             <div class="card">
-                <div class="card-item">kindergarten</div>
-                <div class="card-item">primary</div>
-                <div class="card-item">high school</div>
-                <div class="card-item">high school</div>
+                <div class="card-item staff"></div>
+                <div class="card-item staff"></div>
+                <div class="card-item staff"></div>
+                <div class="card-item staff"></div>
             </div>
 
         </section>
+
+        <div class="button-container">
+            <button class="btn"><a href="./contact.html">send us a message</a> </button>
+        </div>
 
 
 
@@ -88,7 +97,7 @@
                         </ul>
                     </div>
                     <div class="footer-logo">
-                        <img src="./images/logo.png" alt="logo">
+                        <a href="#"><img class="logo-image" src="./images/logo.png" alt="logo"></a>
                     </div>
                 </div>
                 <div class="footer-item">
