--- a/admission.html
+++ b/admission.html
@@ -14,13 +14,16 @@
 
         <header>
             <nav>
-                <img src="./images/logo.png" alt="logo">
+                <div>
+                    <a href="./index.html"><img class="logo-image" src="./images/logo.png" alt="logo"></a>
+                </div>
+
                 <div>
                     <ul class="nav-links">
                         <li class="link-item"><a href="./index.html">home</a></li>
                         <li class="link-item"><a href="./about.html">about us</a></li>
                         <li class="link-item"><a href="./admission.html">admission</a></li>
-                        <li class="link-item"><a href="./contact.html">contact us</a></li>
+                        <li class="link-item"><a href="./contact.html">contact</a></li>
                     </ul>
                 </div>
                 <div class="nav-toggle">
@@ -97,6 +100,10 @@
             </div>
         </section>
 
+        <div class="button-container">
+            <button class="btn"><a href="./contact.html">send us a message</a> </button>
+        </div>
+
         <footer>
             <div class="footer-info">
                 <div class="footer-item">
@@ -110,7 +117,7 @@
                         </ul>
                     </div>
                     <div class="footer-logo">
-                        <img src="./images/logo.png" alt="logo">
+                        <a href="#"><img class="logo-image" src="./images/logo.png" alt="logo"></a>
                     </div>
                 </div>
                 <div class="footer-item">
