--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,10 @@
     <div class="container">
         <header>
             <nav>
-                <img src="./images/logo.png" alt="logo">
+                <div>
+                    <a href="./index.html"><img class="logo-image" src="./images/logo.png" alt="logo"></a>
+                </div>
+
                 <div>
                     <ul class="nav-links">
                         <li class="link-item"><a href="./index.html">home</a></li>
@@ -94,7 +97,7 @@
                         </ul>
                     </div>
                     <div class="footer-logo">
-                        <img src="./images/logo.png" alt="logo">
+                        <a href="#"><img class="logo-image" src="./images/logo.png" alt="logo"></a>
                     </div>
                 </div>
                 <div class="footer-item">
