--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div class="container">
         <header>
             <nav>
-                <img src="./images/logo.png" alt="logo">
+                <div>
+                    <a href="./index.html"><img class="logo-image" src="./images/logo.png" alt="logo"></a>
+                </div>
+
 
                 <ul class="nav-links" id="nav-links" >
                     <li class="link-item"><a href="./index.html">home</a></li>
@@ -72,6 +75,10 @@
             </div>
         </section>
 
+        <div class="button-container">
+            <button class="btn"><a href="./contact.html">send us a message</a> </button>
+        </div>
+
         <footer>
             <div class="footer-info">
                 <div class="footer-item">
@@ -85,7 +92,7 @@
                         </ul>
                     </div>
                     <div class="footer-logo">
-                        <img src="./images/logo.png" alt="logo">
+                        <a href="#"><img class="logo-image" src="./images/logo.png" alt="logo"></a>
                     </div>
                 </div>
                 <div class="footer-item">
