change nav bar style and add javascript to toggle in mobile and tablet view

--- a/index.html
+++ b/index.html
@@ -11,30 +11,26 @@
 <body>
 
     <div class="container">
-        <header>
-            <nav>
-                <div>
-                    <a href="./index.html"><img class="logo-image" src="./images/logo.png" alt="logo"></a>
-                </div>
+        <nav id="nav-bar" class="nav-bar">
+            <h2  class="logo"> high hopes school</h2>
 
+            <ul id="links" class="links">
+                 <li class="list-item"><a href="index.html">home</a></li>
+                 <li class="list-item"><a href="./about.html">about</a></li>
+                 <li class="list-item"><a href="./admission.html">admission</a></li>
+                 <li class="list-item"><a href="./contact.html">contact</a></li>
+            </ul>
+            <button id="hamburger" class="hamburger">
+                <a href="#"><img src="./images/facebook.svg" class="facebook-icon" alt="facebook-icon"></a>
+                <!-- <i class="fa-solid fa-bars"></i> -->
+           </button>
 
-                <ul class="nav-links" id="nav-links" >
-                    <li class="link-item"><a href="./index.html">home</a></li>
-                    <li class="link-item"><a href="./about.html">about</a></li>
-                    <li class="link-item"><a href="./admission.html">admission</a></li>
-                    <li class="link-item"><a href="./contact.html">contact</a></li>
-                </ul>
-
-                <button class="nav-toggle" id="nav-toggle">+</button>
-            </nav>
-        </header>
+       </nav>
 
         <section >
             <div class="hero home-hero">
                 <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. At?</p>
-                Commodi dolores praesentium placeat voluptatum modi doloremque laborum sint impedit ipsa voluptate veritatis error necessitatibus officiis, repellat corporis sit obcaecati, quae esse vel nisi amet voluptatem neque fugit! Explicabo deserunt reiciendis veritatis quam culpa earum modi est quas, voluptatem vero molestias corrupti deleniti. Fuga perspiciatis, natus quas enim deleniti porro molestiae ut adipisci sit quis alias repudiandae distinctio culpa quaerat vitae fugiat saepe rerum molestias, ab nemo? Delectus ullam vero obcaecati fuga excepturi illum exercitationem quos eveniet. Rem illo voluptatibus soluta voluptate dolores suscipit aperiam alias nulla mollitia! Nesciunt inventore eveniet, voluptatem delectus a nemo est laudantium quidem. Molestias officiis, quibusdam totam harum eaque, voluptatem suscipit laudantium est nihil ratione eligendi autem fugiat repellendus fugit quas? Vitae explicabo, perspiciatis ex iure porro non corporis laborum, maiores ut rem eveniet eligendi obcaecati sit voluptatem corrupti ullam sunt asperiores. Aut sapiente vero odio accusantium quia voluptas ad, accusamus tempore libero consectetur itaque ducimus cupiditate ullam reprehenderit rem explicabo nobis quo? Quas, quo. Nostrum hic voluptas voluptatibus iure officiis necessitatibus, facere perspiciatis ipsa minus. Perferendis blanditiis incidunt nisi, sed ipsa provident, ex optio omnis placeat odio rem laudantium odit corporis accusantium quisquam dolorem culpa a animi reprehenderit. Pariatur corporis molestias error, minus nesciunt, saepe aspernatur aut fugiat hic dolorem, fuga voluptates soluta voluptatibus esse a illum? Quae repudiandae sequi esse voluptas.
-                 </p>
             </div>
         </section>
 
