--- a/about.html
+++ b/about.html
@@ -12,25 +12,21 @@
 
     <div class="container">
 
-        <header>
-            <nav>
-                <div>
-                    <a href="./index.html"><img class="logo-image" src="./images/logo.png" alt="logo"></a>
-                </div>
+        <nav id="nav-bar" class="nav-bar">
+            <h2  class="logo"> big tony</h2>
 
-                <div>
-                    <ul class="nav-links">
-                        <li class="link-item"><a href="./index.html">home</a></li>
-                        <li class="link-item"><a href="./about.html">about</a></li>
-                        <li class="link-item"><a href="./admission.html">admission</a></li>
-                        <li class="link-item"><a href="./contact.html">contact</a></li>
-                    </ul>
-                </div>
-                <div class="nav-toggle">
-                    <p>+</p>
-                </div>
-            </nav>
-        </header>
+            <ul id="links" class="links">
+                 <li class="list-item"><a href="index.html">home</a></li>
+                 <li class="list-item"><a href="./about.html">about</a></li>
+                 <li class="list-item"><a href="./admission.html">admission</a></li>
+                 <li class="list-item"><a href="./contact.html">contact</a></li>
+            </ul>
+            <button id="hamburger" class="hamburger">
+                <a href="#"><img src="./images/facebook.svg" class="facebook-icon" alt="facebook-icon"></a>
+                <!-- <i class="fa-solid fa-bars"></i> -->
+           </button>
+
+       </nav>
 
         <section class="hero about-hero">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At?</p>
