change width size for google map and google form for mobile view from width to max width for it to be responsive

--- a/contact.html
+++ b/contact.html
@@ -69,14 +69,14 @@
 
         <div class="my-form">
             <div>
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVIkKxPL88WSzRDftiAluPA_Cm-VcnlovVX7S7k6QxfUwkeA/viewform?embedded=true" width="640" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe class="google-form" src="https://docs.google.com/forms/d/e/1FAIpQLSeVIkKxPL88WSzRDftiAluPA_Cm-VcnlovVX7S7k6QxfUwkeA/viewform?embedded=true" width="640" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
         </div>
 
 
         <div class="my-form">
             <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1984.75808813712!2d-0.13507166108472735!3d5.7825094792456175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf79c80861d5a1%3A0xf86849c8bff0abef!2sHigh%20Hopes%20School!5e0!3m2!1sen!2sgh!4v1691802591330!5m2!1sen!2sgh" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1984.75808813712!2d-0.13507166108472735!3d5.7825094792456175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf79c80861d5a1%3A0xf86849c8bff0abef!2sHigh%20Hopes%20School!5e0!3m2!1sen!2sgh!4v1691802591330!5m2!1sen!2sgh" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 
