add new nav icon and links to header logo and nav logo

--- a/admission.html
+++ b/admission.html
@@ -12,8 +12,14 @@
 
     <div class="container">
 
+        <header class="header">
+            <div>
+                <h2><a href="index.html">high hopes school</a></h2>
+            </div>
+        </header>
+
         <nav id="nav-bar" class="nav-bar">
-            <h2  class="logo"> big tony</h2>
+            <h2  class="logo"> <a href="index.html">high hopes school</a></h2>
 
             <ul id="links" class="links">
                  <li class="list-item"><a href="index.html">home</a></li>
@@ -22,7 +28,7 @@
                  <li class="list-item"><a href="./contact.html">contact</a></li>
             </ul>
             <button id="hamburger" class="hamburger">
-                <a href="#"><img src="./images/facebook.svg" class="facebook-icon" alt="facebook-icon"></a>
+                <a href="#"><img src="./images/nav-icon.svg" class="nav-icon" alt="nav-icon"></a>
                 <!-- <i class="fa-solid fa-bars"></i> -->
            </button>
 
@@ -47,7 +53,11 @@
                     </p>
 
                     <p>
-                        Parents / Guardians should visit the school to pick up an admission form and also for further inquiries. you can also contact the school for more information about enrollment. Admission is in progress.
+                        Parents / Guardians should visit the school to pick up an admission form and also for further inquiries.
+                    </p>
+
+                    <p>
+                        You can also contact the school for more information about enrollment. Admission is in progress.
                     </p>
 
                     <p>
