--- a/about.html
+++ b/about.html
@@ -12,8 +12,14 @@
 
     <div class="container">
 
+        <header class="header">
+            <div>
+                <h2><a href="index.html">high hopes school</a></h2>
+            </div>
+        </header>
+
         <nav id="nav-bar" class="nav-bar">
-            <h2  class="logo"> big tony</h2>
+            <h2  class="logo"> <a href="index.html">high hopes school</a></h2>
 
             <ul id="links" class="links">
                  <li class="list-item"><a href="index.html">home</a></li>
@@ -22,7 +28,7 @@
                  <li class="list-item"><a href="./contact.html">contact</a></li>
             </ul>
             <button id="hamburger" class="hamburger">
-                <a href="#"><img src="./images/facebook.svg" class="facebook-icon" alt="facebook-icon"></a>
+                <a href="#"><img src="./images/nav-icon.svg" class="nav-icon" alt="nav-icon"></a>
                 <!-- <i class="fa-solid fa-bars"></i> -->
            </button>
 
