--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
 
     <div class="container">
+        <header class="header">
+            <div>
+                <h2><a href="index.html">high hopes school</a></h2>
+            </div>
+        </header>
         <nav id="nav-bar" class="nav-bar">
 
             <h2  class="logo"> high hopes school</h2>
@@ -23,16 +28,16 @@
             </ul>
 
             <button id="hamburger" class="hamburger">
-                <a href="#"><img src="./images/facebook.svg" class="facebook-icon" alt="facebook-icon"></a>
+                <a href="#"><img src="./images/nav-icon.svg" class="nav-icon" alt="nav-icon"></a>
                 <!-- <i class="fa-solid fa-bars"></i> -->
            </button>
 
        </nav>
 
         <section >
-            <div class="hero home-hero">
-                <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At?</p>
+            <div id="home-hero" class="hero">
+                <h2>welcome</h2>
+
             </div>
         </section>
 
