add backgroung images to hero and nav items

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
        </nav>
 
-        <section >
+        <section class="hero-section">
             <div id="home-hero" class="hero">
                 <h2>welcome</h2>
 
