--- a/about.html
+++ b/about.html
@@ -72,10 +72,10 @@
                 <h1>management and staff</h1>
             </div>
             <div class="card">
-                <div class="card-item staff"></div>
-                <div class="card-item staff"></div>
-                <div class="card-item staff"></div>
-                <div class="card-item staff"></div>
+                <div class="card-item staff1"></div>
+                <div class="card-item staff2"></div>
+                <div class="card-item staff3"></div>
+                <div class="card-item staff4"></div>
             </div>
 
         </section>
